[package]
name = "netbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
console = "0.15.2"
indicatif = "0.17.2"

[profile.release]
strip = true
lto = true
