[package]
name = "netbench"
version = "0.1.0"
edition = "2021"
authors = ["beni69"]
license = "GPL-3.0"
description = "A simple network benchmarking tool"
repository = "https://github.com/beni69/netbench"
homepage = "https://github.com/beni69/netbench"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
indicatif = "0.17.2"

[profile.release]
strip = true
lto = true
